--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
     
     <div class="container">
         <div id="question-section">
-            <h1>💘 ¡Hola mi amor! 💘</h1>
+            <h1>💘 ¡Hola amor! 💘</h1>
             <p class="question">¿Quieres ser mi Valentine?</p>
-            <div class="emoji">🥺</div>
+            <div class="emoji">🫣</div>
             
             <div class="buttons">
-                <button id="yesBtn">¡Sí! 💖</button>
+                <button id="yesBtn">Sí</button>
                 <button id="noBtn">No</button>
             </div>
             <p class="no-counter" id="noCounter"></p>
@@ -224,7 +224,7 @@
             <h2>¡SABÍA QUE DIRÍAS QUE SÍ! 🎉</h2>
             <div class="emoji">😍</div>
             <p>¡Eres la mejor! Me haces el más feliz del mundo 💕</p>
-            <p style="margin-top: 20px;">Te amo muchísimo, mi Valentine perfecta 🌹</p>
+            <p style="margin-top: 20px;">Te amo muchísimo🌹</p>
         </div>
     </div>
 
