--- a/index.html
+++ b/index.html
@@ -250,15 +250,10 @@
 
         let noClickCount = 0;
         const noMessages = [
-            "¿Estás segura? 🥺",
-            "¡Piénsalo mejor! 💔",
-            "¡Pero si somos perfectos juntos! 😢",
-            "Dale otra oportunidad al botón de Sí 👉💖",
-            "El botón de No ya está cansado... 😴",
-            "¡Mira qué grande está el Sí ahora! 👀",
-            "Ok ok, ¿y si intento sobornarte con comida? 🍕",
-            "¡El botón de Sí te extraña! 💔",
-            "Última oportunidad antes de que el No desaparezca... 👻"
+            "¿Estás segura?",
+            "Creo que te confundiste",
+            "El botón de No ya está cansado...",
+            "Ok ok, ¿y si intento sobornarte con comida? ",
         ];
 
         let yesBtnScale = 1;
